# llm-browser

./: .gitignore  README.md  main.py  pyproject.toml
llm_browser/: browser.py  cli.py  client.py  config.py  db.py  server.py
llm_browser/providers/: __init__.py  base.py  chatgpt.py  claude.py  gemini.py
llm_browser/utils/: dom_inspector.py
planning/: plan.md
